src/test/deca/context/invalid/assign_type.deca
{
String a;
a = 4;
}
// @expected_output deca:3:4: Rvalue is of type int and leftOperand is of type String
